Renaming + CSS rework
* Renamed `shifts.html` to `landing_page.html` to remove confusion between the admin page for shifts and the landing page for guards. Also updated a reference in `login.js` to account for the new naming.
* Added logo-navbar (header) from other pages to landing page.
* Stopped resizing week change buttons on landing page.
* Added proper responsiveness to the modal for `landing_page.html`.
* Made `shift-modal-people-column` in `shift-modal` taller by default.
* Homogenized landing page page to look like the other pages.
* Injected header through JS instead of duplicating it in all HTML-pages.
* Fixed ugly DateTime in `shift_modal.js`.
* Changed `findAcceptedGuardNamesByShiftId` to return `List<Guards>` because I need their phone number in frontend. Updated service, controller correspondingly. Also updated tests using the previous method.